[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "tmpc"
version = "0.1.0"
description = "Tube-based Model Predictive Control."
authors = [
    {name = "Rui Huang", email = "ruihuang0421@gmail.com"},
]

dependencies = [
    "clarabel==0.6.0",
    "contourpy==1.2.0",
    "cvxopt==1.3.2",
    "cvxpy==1.4.2",
    "cvxpy-base==1.4.2",
    "cycler==0.12.1",
    "ecos==2.0.13",
    "fonttools==4.49.0",
    "importlib_resources==6.1.2",
    "kiwisolver==1.4.5",
    "matplotlib==3.8.3",
    "numpy==1.26.4",
    "osqp==0.6.5",
    "packaging==23.2",
    "pillow==10.2.0",
    "piqp==0.2.4",
    "pybind11==2.11.1",
    "pyparsing==3.1.1",
    "python-dateutil==2.8.2",
    "qdldl==0.1.7.post0",
    "scipy==1.11.4",
    "scs==3.2.4.post1",
    "six==1.16.0",
    "zipp==3.17.0",
]

[tool.setuptools.packages.find]
where = ["src"]
